# Course_work

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
sql/: init.sql
src/: addthreatdialog.cpp  addthreatdialog.h  auth.cpp  auth.hpp  crypto.cpp  crypto.hpp  db.cpp  db.hpp  downloader.cpp  downloader.hpp  importer.cpp  importer.hpp  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  manageusersdialog.cpp  manageusersdialog.h  search_session.cpp  search_session.hpp  threats.cpp  threats.hpp  xlsx_converter.cpp  xlsx_converter.hpp
src/orm/: threat_entity.hpp  unit_of_work.hpp  user_entity.hpp  user_repository.cpp  user_repository.hpp
